src/tess/tl/test/pass/test_defun_inline_type.tl
#module main
add(l: Int, r: Int) { l + r }

main() {
    result : CInt := add(-1, 1)
    result
}
