src/tess/tl/test/fail/test_fail_integer_narrowing_return.tl
#module main

// Narrowing: Function returns Int, declared -> CInt should fail.

get_value() -> Int { 42 }

narrow_return() -> CInt {
    get_value()
}

main() {
    narrow_return()
    0
}
